# immutable-ledger

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: ledger_bench.rs
src/: ledger.rs  merkle.rs  types.rs
tests/: proptest_regression.rs
